// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChatDisplay - file_edit tool call snapshot altMode (running → done) > snapshot: done state (result appended) 1`] = `
"❯ [you]
  Update the constant in utils

⚙ Edit src/utils.ts
  │  1│- const x = 1;
  │  1│+ const x = 2;
  └─ Edited (42 bytes)

"
`;

exports[`ChatDisplay - file_edit tool call snapshot altMode (running → done) > snapshot: running state (no result yet) 1`] = `
"❯ [you]
  Update the constant in utils

⚙ Edit src/utils.ts
  │  1│- const x = 1;
  │  1│+ const x = 2;
  └─ Running ...
"
`;
